Regenerate catalogs and include the JustJ 25 release